Details
-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.3.1
-
Windows
Description
[Windows][cdb]: When debugging then at times it can take a lot longer to step over code. It is not always possible to reproduce this, but if the pdb files (such as for QtWebEngineCore) are really big then it can make it much more visible. When debugging in the same way in Visual Studio then it is fine.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-18287 Debugging with CDB is extremely slow
-
- Closed
-
-
QTCREATORBUG-19438 Reuse debug symbol groups in CDB for faster performance when switching between stack frames
-
- Closed
-